--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,9 @@
 }
 .row-content{
     margin: 0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height: 400px;
+    padding: 00px 0px 50px 0px;
+    border-bottom: 0px ridge;
+    min-height: 0px;
 }
 .footer{
     background-color: #D1C4E9;
@@ -23,4 +23,12 @@
     font-size: 80%;
     margin:  0px;
     color: #0f0f0f;
+}
+body{
+    padding: 50px 0px 0px 0x;
+    z-index: 0;
+}
+
+.navbar-dark {
+    background-color: #512da8;
 }
